xtras/wxc/wxc_glue.h


int expEVT_COMMAND_BUTTON_CLICKED();

int expEVT_COMMAND_MENU_SELECTED();

int expEVT_KEY_UP();

int expEVT_PAINT();

int expEVT_TIMER();